<resources>
    <string name="app_name">TuDoka</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="texto_numero_devolucion">"No. devolución:"</string>


    <!--Pantalla login-->
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>

    <!--Menu inicio-->
    <string name="bienvenido">Bienvenido a</string>
    <string name="titulo_inicio">Nos da gusto que estés aquí</string>
    <string name="instrucciones_inicio">¿Qué reporte deseas hacer</string>
    <string name="reporte_envio">Reporte de envío</string>
    <string name="reporte_devolucion">Reporte de devolución</string>
    <string name="reporte_dano">Reporte de material inservible</string>
    <string name="reporte_obra">Reporte de obra</string>
    <string name="logout">Cerrar sesión</string>
    <string name="intrucciones_reporte">Por favor ingresa los siguientes datos:</string>
    <string name="nombre_cliente">Nombre del cliente</string>
    <string name="numero_cliente">Número del cliente</string>
    <string name="nombre_proyecto">Nombre de proyecto</string>
    <string name="numero_proyecto">Número de proyecto</string>

    <string name="selecciona">Selecciona...</string>
    <string name="guardar">Guardar</string>
    <string name="detalle_reporte">Detalle del reporte</string>
    <string name="cliente">Cliente</string>
    <string name="no_cliente">No. cliente</string>
    <string name="proyecto">Proyecto</string>
    <string name="no_proyecto">No. proyecto</string>
    <string name="continuar">Continuar</string>
    <string name="agregar_item">Agregar Item</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="nombre_pieza">Nombre de la Pieza</string>
    <string name="codigo_pieza">Código de la Pieza</string>
    <string name="numero_piezas">Número de piezas</string>
    <string name="resumen_items">Resumen de Items</string>
    <string name="eliminar">Eliminar</string>
    <string name="nuevo_item">Nuevo Item</string>
    <string name="listas_carga">Listas de carga</string>
    <string name="nueva_lista_carga">Nueva lista carga</string>
    <string name="informacion_transporte">Información de Transporte</string>
    <string name="licencia">Licencia Chofer</string>
    <string name="placa_delantera">Tracto Placa Delantera</string>
    <string name="placa_trasera">Tracto Placa Trasera</string>
    <string name="lateral1">Tracto Lateral 1</string>
    <string name="lateral2">Tracto Lateral 2</string>
    <string name="tracto_trasera">Tracto Parte Trasera</string>
    <string name="numeros_remision">Números de remisión</string>
    <string name="instrucciones_numero_remision">Escribe el número de remisión y da click en Agregar</string>
    <string name="numero_remision">Número de remisión...</string>
    <string name="finalizar">Finalizar</string>
    <string name="documentos_cliente">Documentos cliente</string>
    <string name="nuevo_documento_cliente">Nuevo documento cliente</string>
    <string name="numeros_devolucion">Números de devolución</string>
    <string name="instrucciones_numero_devolucion">Escribe el número de devolución y da click en Agregar</string>
    <string name="numero_devolucion">Número de devolución...</string>saul.ro
    <string name="selecionar_item">Seleccionar Item</string>

    <string name="tipo_dano">Tipo de daño</string>
    <string name="no_devolucion">No. devolución</string>
    <string name="enviar_reporte">Enviar reporte</string>
    <string name="enviar">Enviar</string>
    <string name="salir">Salir</string>
    <string name="reporte_capacitacion">Reporte de capacitación</string>
    <string name="reporte_seguimiento">Reporte de seguimiento</string>
    <string name="nombre_curso">Nombre del curso</string>
    <string name="agregar_actividad_capacitacion">Agregar actividad de capacitación</string>
    <string name="descripcion_actividad">Descripción de la actividad</string>
    <string name="resumen_actividades">Resumen de Actividades</string>
    <string name="agregar_actividad_seguimiento">Agregar actividad de seguimiento</string>

    <string name="agregar">Agregar</string>
    <string name="cargando">Cargando</string>
    <string name="seleccionar_item">Seleccionar item</string>
    <string name="cerrar">Cerrar</string>
    <string name="exito_guardar">Éxito al guardar</string>
    <string name="guardando">Guardando</string>
    <string name="subiendo_docs_carga">Subiendo documentos de carga</string>
    <string name="subiendo_remisiones">Subiendo números de remisión</string>
    <string name="subiendo_fotos_transporte">Subiendo fotos transporte</string>
    <string name="subiendo_items">Subiendo items</string>
    <string name="generando_pdf">Generando PDF</string>
    <string name="error_mail">Escribe al menos un email</string>
    <string name="reporte_generado_exito">Reporte generado con éxito</string>
    <string name="ver_reporte">Ver reporte</string>

    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->


</resources>
