<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/reporte_obra"
        android:textColor="@color/azul"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/instrucciones_inicio"
        android:textColor="@color/azul"
        android:textSize="18dp" />

    <Button
        android:id="@+id/btn_reporte_capacitacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reporte_capacitacion"
        android:textColor="@color/azul" />

    <Button
        android:id="@+id/btn_reporte_seguimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reporte_seguimiento"
        android:textColor="@color/azul" />

</LinearLayout>