<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listas_carga"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/azul"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />
    <Button
        android:id="@+id/btn_nueva_lista_carga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nueva_lista_carga"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="@color/azul"
        android:textColor="@color/blanco"
    />
    <ListView
        android:id="@+id/lista_lista_carga"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        />
    <Button
        android:id="@+id/btn_continuar_lista_carga"
        android:text="@string/continuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="@color/azul"
        android:textColor="@color/blanco"
        android:layout_marginTop="20dp"
        />
        </LinearLayout>
    </ScrollView>
</LinearLayout>