<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DatosDevolucionActivity">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:minHeight="700dp"
        tools:context=".DatosDevolucionActivity">


        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/searchable_spinner4"
            android:layout_width="325dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:ignore="MissingConstraints">


        </com.toptoche.searchablespinnerlibrary.SearchableSpinner>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="325dp"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/nombre_proyecto"
            android:textColor="#004a8e"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchable_spinner_codigo_item" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/searchable_spinner_numero_item"
            android:layout_width="325dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:ignore="MissingConstraints">


        </com.toptoche.searchablespinnerlibrary.SearchableSpinner>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="325dp"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/numero_cliente"
            android:textColor="#004a8e"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchable_spinner_nombre_item" />


        <TextView
            android:id="@+id/textView9"
            android:layout_width="325dp"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/numero_proyecto"
            android:textColor="#004a8e"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchable_spinner4" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/searchable_spinner_nombre_item"
            android:layout_width="325dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="MissingConstraints">
        </com.toptoche.searchablespinnerlibrary.SearchableSpinner>


        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/searchable_spinner_codigo_item"
            android:layout_width="325dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            tools:ignore="MissingConstraints">


        </com.toptoche.searchablespinnerlibrary.SearchableSpinner>


        <TextView
            android:id="@+id/textView8"
            android:layout_width="325dp"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:text="@string/nombre_cliente"
            android:textColor="#004a8e"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="325dp"
            android:layout_height="27dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:text="@string/intrucciones_reporte"
            android:textColor="#004a8e"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="271dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:autoText="true"
            android:text="@string/reporte_envio"
            android:textAlignment="center"
            android:textColor="#004a8e"
            android:textColorLink="#004a8e"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/guardar_datos"
            android:layout_width="325dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="20dp"
            android:background="#004a8e"
            android:text="@string/continuar"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.603"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchable_spinner_numero_item" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>